<resources>
    <!-- Strings related to Settings -->
    <string name="app_name">Tow Log</string>

    <string name="default_log_email_address">nthf-styret@list.stud.ntnu.no</string>
    <string name="title_activity_settings">Settings</string>

    <string name="during_tow_ready">Ready, %1$dm MSL, %2$d m/s</string>
    <string name="during_tow_towing_max_height">Towing, max height</string>
    <string name="during_tow_height_m">%1$dm</string>
    <string name="during_tow_slide_to_unlock">Slide to unlock</string>
    <string name="during_tow_release">Release</string>
    <string name="during_tow_released">Released</string>
    <string name="during_tow_gps_height">GPS tow height %1$dm</string>

    <string name="location_permission_title">Location permission</string>
    <string name="location_permission_rationale_message">TowLog needs location access to track towing altitude during flights.</string>
    <string name="location_permission_denied_message">Location permission was denied. You can still browse the app, but towing altitude tracking will not work.</string>
    <string name="location_permission_permanently_denied_message">Location permission is blocked. Enable location permission in system settings to use towing altitude tracking.</string>
    <string name="location_permission_allow">Allow</string>
    <string name="location_permission_not_now">Not now</string>
    <string name="location_permission_ok">OK</string>

    <string name="fiken_contact_loading_enabled_title">Enable Fiken contact loading</string>
    <string name="fiken_contact_loading_enabled_summary">Allow loading contacts from the configured Fiken API URL. Only contacts of type Customer and that are Active are loaded. </string>
    <string name="fiken_contact_loading_disabled_message">Fiken contact loading is disabled in settings.</string>

    <string name="main_prepare_towing_title">Prepare Towing</string>
    <string name="main_start_new_day">Start New Day</string>
    <string name="main_resume_day">Resume Day</string>
    <string name="main_selected_date">Selected Date</string>
    <string name="main_selected_date_value">Selected Date: %1$s</string>
    <string name="main_tow_pilot_name">Tow Pilot Name</string>
    <string name="main_tow_plane_registration">Tow Plane Registration</string>
    <string name="main_menu_previous_logs">Previous logs</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_no_previous_logs">No previous logs found</string>
    <string name="main_previous_logs_title">Previous logs</string>
    <string name="main_unable_to_parse_log_date">Unable to parse selected log date</string>
    <string name="main_could_not_load_selected_log">Could not load selected log</string>
    <string name="main_tow_pilot_hint">Enter tow pilot name</string>
    <string name="main_tow_plane_hint">Enter tow plane registration</string>
    <string name="main_tow_pilot_status_icon_description">Tow pilot status</string>

    <string name="dayoverview_menu_edit_log">Edit log</string>
    <string name="dayoverview_new_tow">New tow</string>
    <string name="dayoverview_finish_log_edit">Finish log edit</string>

    <string name="pref_default_towplane_reg">LN-</string>
    <string name="pref_default_glider_reg">LN-G</string>
    <string name="pref_default_notes">Instruktøropplæring,Introkurs</string>



</resources>
