<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="no.ntnuf.tow.towlog2.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarmain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarmain"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/SecondaryAppTheme">

        <LinearLayout
            android:id="@+id/mainButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:theme="@style/Theme.MaterialComponents.Light">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startDayButton"
                android:layout_width="@dimen/main_action_button_width"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:paddingStart="@dimen/main_action_button_padding_horizontal"
                android:paddingTop="@dimen/main_action_button_padding_vertical"
                android:paddingEnd="@dimen/main_action_button_padding_horizontal"
                android:paddingBottom="@dimen/main_action_button_padding_vertical"
                android:text="@string/main_start_new_day"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="@dimen/main_action_button_corner_radius"
                app:rippleColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resumeDayButton"
                android:layout_width="@dimen/main_action_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:paddingStart="@dimen/main_action_button_padding_horizontal"
                android:paddingTop="@dimen/main_action_button_padding_vertical"
                android:paddingEnd="@dimen/main_action_button_padding_horizontal"
                android:paddingBottom="@dimen/main_action_button_padding_vertical"
                android:text="@string/main_resume_day"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/resumeday_button"
                app:cornerRadius="@dimen/main_action_button_corner_radius"
                app:rippleColor="@color/white" />
        </LinearLayout>

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:layout_above="@id/mainButtonContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/selectDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_neutral"
                    android:paddingStart="@dimen/main_action_button_padding_horizontal"
                    android:paddingTop="@dimen/main_action_button_padding_vertical"
                    android:paddingEnd="@dimen/main_action_button_padding_horizontal"
                    android:paddingBottom="@dimen/main_action_button_padding_vertical"
                    android:text="@string/main_selected_date"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/towPilotNameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:labelFor="@id/towPilotNameIn"
                    android:text="@string/main_tow_pilot_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/towPilotNameIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textPersonName"
                        android:nextFocusDown="@id/towPlaneIn"
                        android:paddingStart="8dp"
                        android:paddingEnd="40dp"
                        android:textSize="30sp" />

                    <ImageView
                        android:id="@+id/towPilotCheckmark"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/main_tow_pilot_status_icon_description"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="4dp"
                        android:visibility="gone" />
                </FrameLayout>

                <TextView
                    android:id="@+id/towPlaneTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:labelFor="@id/towPlaneIn"
                    android:text="@string/main_tow_plane_registration"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/towPlaneIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:importantForAutofill="no"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
